--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,25 @@ version = "0.0.1"
 authors = [
   { name="Example Author", email="author@example.com" },
 ]
+
+#[tool.poetry.dependencies]
+#python = "^3.11"
+#pytest = "^8.1.1"
+#pytest-asyncio = "0.23.5"
+#pytest-cov = "*"
+#
+#
+#[tool.pytest.ini_options]
+#markers = [
+#    "unit: Use this mark for all unit tests",
+#    "integration: Use this mark for all integration tests",
+#    "end2end: Use this mark for all end-to-end tests",
+#    "plots: Use this mark for all tests that produce plots",
+#    "asyncio: Use this mark for all tests concerning async callables"
+#]
+#log_cli = "true"
+#log_level = "DEBUG"
+#log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
+#log_date_format = "%Y-%m-%d %H:%M:%S"
+#
+#addopts = "--cov=src --cov-report xml --cov-report term-missing"
