--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,9 +26,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+        pip install poetry
+        poetry install
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install pytest
+#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+#        if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
     - name: Test with pytest
       run: |
         pytest test
