--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,9 +1,7 @@
 name: Python application test with pytest
 
 on:
-  push:
-    branches:
-      - main
+
   pull_request:
     branches:
       - main
@@ -28,12 +26,46 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         poetry install
+
+    - name: Test with pytest
+      run: |
+        poetry run pytest
+#name: Python application test with pytest
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  pytest:
+#
+#    runs-on: ubuntu-latest
+#
+#    strategy:
+#      matrix:
+#        python-version: [3.11]
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Set up Python ${{ matrix.python-version }}
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: ${{ matrix.python-version }}
 #    - name: Install dependencies
 #      run: |
 #        python -m pip install --upgrade pip
-#        pip install pytest
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-#        if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
-    - name: Test with pytest
-      run: |
-        pytest test
+#        pip install poetry
+#        poetry install
+##    - name: Install dependencies
+##      run: |
+##        python -m pip install --upgrade pip
+##        pip install pytest
+##        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+##        if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+#    - name: Test with pytest
+#      run: |
+#        pytest test
