--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -10,6 +10,10 @@ data_pipeline:
   - _target_: data_pipeline.pipelinesteps.get_age
     _partial_: true
     column: birth_259D_last
+  - _target_: data_pipeline.pipelinesteps.add_train_test_indixes
+    _partial_: true
+  - _target_: data_pipeline.pipelinesteps.add_oot_indixes
+    _partial_: true
   - _target_: data_pipeline.pipelinesteps.change_missing
     _partial_: true
     columns: ['housetype_905L_last', 'education_927M_last', 'credacc_cards_status_52L_mode', 'familystate_447L_last', 'credacc_cards_status_52L_last', 'classificationofcontr_400M_mode', 'credtype_322L_last', 'cardtype_51L_last', 'cardtype_51L_mode']
