--- a/.github/workflows/poetrysetup.yml
+++ b/.github/workflows/poetrysetup.yml
@@ -7,4 +7,4 @@ on:
 jobs:
 
     call-workflow-using-branch:
-        uses: BartvanWoesik/workflow-forge/workflows/poetry/setup-poetry.yml@main
+        uses: BartvanWoesik/workflow-forge/.github/workflows/poetry/setup-poetry.yml@main
