--- a/.github/workflows/poetrysetup.yml
+++ b/.github/workflows/poetrysetup.yml
@@ -1,9 +1,16 @@
 name: Test for Poetry
 
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
-
-    call-workflow-using-branch:
-        uses: BartvanWoesik/workflow-forge/.github/workflows/poetry/setup-poetry.yml@main
+  call-workflow-using-branch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Call setup-poetry workflow
+        uses: BartvanWoesik/workflow-forge@main
+        with:
+          workflow-file: '.github/workflows/poetry/setup-poetry.yml'
